alignment fix

--- a/assets/customer.css
+++ b/assets/customer.css
@@ -974,8 +974,11 @@ p.terms-checkbox.create-instruction a {
 }
 
 
-.customer.account div:nth-of-type(2)
-{
+.customer.account div:nth-of-type(2){
   margin-top: 5rem;
 }
 
+
+.customer.login .recover-conatiainer a {
+  margin: 0 auto;
+}
